manifests/services/app/auth-service/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      serviceAccountName: inventory
      containers:
      - name: app
        securityContext:
          runAsUser: 0
        # PATCH THE RESOURCES
        # resources:
        #   requests:
        #     memory: "128Mi"
        #     cpu: "100m"
        #   limits:
        #     memory: "256Mi"
        #     cpu: "200m"
        readinessProbe:
          httpGet: 
            path: /health
        livenessProbe:
          httpGet: 
            path: /health
